# notes

./: .gitignore  Notes.sln
Patterns/: Disposable.cs  Patterns.csproj  WeakReferenceTest.cs
Patterns/Properties/: AssemblyInfo.cs
boost.di_examples/: CMakeLists.txt  main.cpp  test1.h  test2.h  test3.h  test4.h  test5.h  test6.h
cmake_example/: CMakeLists.txt
utils/: CMakeLists.txt  TestVariadicTemplate.h  main.cpp  offset_of.h  val_container.h
utils/docs/: Описание работы val_reference.xlsx
utils/test/: CMakeLists.txt  test_val_container.cpp
